Allowed all the request coming in to h2console, bypass the security, also enable frames for h2console and disabled csrf

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,16 @@
 spring:
   application:
-    name=springsecuritydemo
+    name: springsecuritydemo
 
   security:
     user:
-      name: user
-      password: user123
+      name: demo
+      password: demo123
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:test
+
+server:
+  port: 8081
